fix css, add widgets section on tablet-wite breakpoint

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -6,7 +6,6 @@
 	padding: 0.4rem 1rem;
 	display: flex;
 	align-items: center;
-	max-width: 600px;
 	gap: 1.4rem;
 	background-color: rgba($color: #fff, $alpha: 0.99);
 
@@ -47,5 +46,9 @@
 		&:hover {
 			background: #f5f5f5;
 		}
+	}
+
+	@include mq('phone-wide') {
+		border-right: 1px solid #e6ecf0;
 	}
 }
