--- a/src/styles/components/_newPost.scss
+++ b/src/styles/components/_newPost.scss
@@ -5,7 +5,6 @@
 
 	@include mq('phone-wide') {
 		padding: 1rem;
-		max-width: 600px;
 		display: grid;
 		grid-template-columns: 50px 1fr;
 		gap: 1rem;
