--- a/src/styles/components/_posts.scss
+++ b/src/styles/components/_posts.scss
@@ -1,5 +1,1 @@
 @use '../utilities/' as *;
-
-.posts {
-	max-width: 600px;
-}
