--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -9,7 +9,7 @@
 		gap: 1rem;
 		background-color: #eff3f4;
 		border-radius: 30px;
-		width: 340px;
+		// width: 340px;
 		color: #484e53;
 
 		&:focus-within {
